[data] add scss structure

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,7 @@
-h1 {
-}
+@import "vendors/reset.scss";
+
+@import "config/medias.scss";
+@import "config/variables.scss";
+
+@import "global/layout.scss";
+@import "global/typography.scss";
