[SCSS JS] ADD styling and animations to the 'bottle' bloc

--- a/src/styles/global/typography.scss
+++ b/src/styles/global/typography.scss
@@ -2,3 +2,8 @@
   font-family: FuturaCon;
   src: url(.\..\assets\font\FuturaCon.ttf);
 }
+
+@font-face {
+  font-family: KeepOn;
+  src: url(.\..\assets\font\KeeponTruckin.ttf);
+}
