--- a/src/styles/blocs/brand.scss
+++ b/src/styles/blocs/brand.scss
@@ -3,7 +3,11 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 3%;
+  height: 10vh;
+  @include desktop{
+    width: 50vw;
+  }
+
 }
 
 .brand__logo {
@@ -14,4 +18,7 @@
   font-family: FuturaCon;
   font-size: 6vw;
   margin-left: 10%;
+  @include desktop{
+    font-size: 2vw;
+  }
 }
