--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,4 +10,13 @@
 @import "global/layout.scss";
 
 @import "blocs/brand.scss";
+@import "blocs/line.scss";
 @import "blocs/bottle.scss";
+@import "blocs/juice.scss";
+@import "blocs/product.scss";
+@import "blocs/recipe.scss";
+@import "blocs/ingredient.scss";
+
+
+
+
