[SCSS HTML] EDIT general styling and ADD pub bloc

--- a/src/styles/blocs/bottle.scss
+++ b/src/styles/blocs/bottle.scss
@@ -4,6 +4,8 @@
     justify-content: center;
     width: 100%;
     position: relative;
+    background-image: linear-gradient(to bottom,white, #41b9ff)
+
 }
 
 .bottle__position{
