--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,13 +9,16 @@
 @import "global/typography.scss";
 @import "global/layout.scss";
 
+@import "blocs/beach.scss";
 @import "blocs/brand.scss";
 @import "blocs/line.scss";
 @import "blocs/bottle.scss";
-@import "blocs/juice.scss";
+@import "blocs/sand.scss";
 @import "blocs/product.scss";
 @import "blocs/recipe.scss";
 @import "blocs/ingredient.scss";
+@import "blocs/pub.scss";
+
 
 
 
