--- a/src/styles/blocs/recipe.scss
+++ b/src/styles/blocs/recipe.scss
@@ -1,4 +1,5 @@
 .recipe{
+
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -6,18 +7,16 @@
     height:400vh;
     overflow: hidden;
     @include tablet{
-    height:280vh;
+    height:160vh;
+    grid-area: recipe;
 
     }
     @include desktop{
-    height:150vh;
-        flex-basis: 40%;
     }
 }
 
 .recipe__ingredients{
     @include styleTitle;
     text-align: center;
-    padding: 7%;
     flex-basis: 5%;
 }
