[HTML and SCSS] ADD 'goodbye' bloc and EDIT general responsive

--- a/src/styles/blocs/sand.scss
+++ b/src/styles/blocs/sand.scss
@@ -4,10 +4,13 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 8fr 1fr; 
-    grid-template-areas: "product" "recipe" "pub";
+    grid-template-areas: "product" "recipe" "pub" "goodbye";
+    @include tablet{
+        grid-template-rows: 1fr 5fr 1fr;
+    }
     @include desktop{
         grid-template-columns: 1fr 2fr;
-        grid-template-rows: 1fr 5fr; 
-        grid-template-areas: "recipe product" "recipe pub";
+        grid-template-rows: 0.5fr 1fr 2fr; 
+        grid-template-areas: "recipe product" "recipe pub" "recipe goodbye";
     }
 }
