--- a/src/styles/blocs/pub.scss
+++ b/src/styles/blocs/pub.scss
@@ -3,18 +3,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;    
-    @include desktop{
-        display: flex;
-        justify-content: center;
-    }
+    align-items: center;   
+
 }
 
 .pub__title{
+    padding: 5%; 
+
     text-align: center;
     @include styleTitle;
 }
 
-.pub__video{
-    
-}
